Added the hover effect on the subscribe button.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                         <!-- Email input field -->
                         <input id="email" type="email" placeholder="Enter your email" class="w-full sm:w-auto p-2 mb-2 sm:mb-0 sm:mr-2 rounded focus:outline-none" aria-label="Email address">
                         <!-- Subscribe button -->
-                        <button class="w-full sm:w-auto px-6 py-2.5 bg-[#d86943] text-white rounded">Subscribe</button>
+                        <button class="w-full sm:w-auto px-6 py-2.5 bg-[#d86943] text-white rounded hover:bg-[#c55b3d] transition-colors">Subscribe</button>
+
                     </div>
                 </div>
                 
